# scholar

./: Makefile  README.md  pyproject.toml
examples/demo.ru/: README.md  demo.md
scholar/: __main__.py  constants.py  converters.py  settings.py  styles.py
scholar/pandoc_filters/: convert_image_from_svg_to_pdf.lua  convert_svg_to_pdf.py  make_and_render_sections.lua  make_latex_table.py  render_code.lua  render_code_block.lua  render_div_list_of_references.lua  render_image.lua  render_math.lua  render_table.lua
scholar/pandoc_json_filters/: convert_svg_to_pdf.py
scholar/pandoc_lua_filters/: include_code_block.lua  make_and_render_sections.lua  make_latex_code.lua  make_latex_code_and_code_block.lua  make_latex_code_block.lua  make_latex_table.lua  merge_code_blocks_and_paragraph_captions.lua  references-in-text.lua  render-references-in-text.lua  render_citations_in_text.lua  render_code_block.lua  render_div_list_of_references.lua  render_div_table_of_contents.lua  render_image.lua  render_link_reference.lua  render_math.lua  render_references_in_text.lua  render_sections.lua  render_table.lua  render_table_of_contents_container.lua  tocless_headers.lua  trim_code_block.lua
scholar/pandoc_templates/: scholar.tex
texdown/: __main__.py
