[tool.poetry]
name = "scholar"
version = "0.1.0"
description = ""
authors = ["Kirill Gashkov <kirill@gashkov.com>"]

[tool.poetry.dependencies]
python = "^3.10"
typer = "^0.6.1"
rich = "^12.5.1"
pydantic = "^1.10.2"
pyyaml = "^6.0"
python-frontmatter = "^1.0.0"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
isort = "^5.10.1"
black = "^22.6.0"
mypy = "^0.971"

[tool.poetry.group.dev.dependencies]
types-pyyaml = "^6.0.12.2"

[tool.isort]
profile = "black"
known_first_party = ["scholar"]

[tool.mypy]
disallow_any_generics = true
disallow_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
